# ai-secretary

./: .env.example  .gitignore  Dockerfile  action_dispatcher.py  ai-secretary.code-workspace  ai_prompt_draft.md  app.py  calendar_service.py  clean_deploy_script.py  comprehensive_test_report.md  config.py  contacts_service.py  credentials.json  deploy.sh  deploy_vps.sh  deploy_vps_simple.sh  diagnose_sheet.py  do_deploy.py  drive_organizer.py  drive_service.py  fix_deploy_script.py  gmail_service.py  google_auth.py  google_workspace_skills.py  intent_router.py  line_service.py  llm_service.py  logic_check.py  main.py  memory_service.py  migrate_to_pinecone.py  notebooklm_service.py  output.txt  persona_soul.md  pinecone_memory.py  pyproject.toml  requirements.txt  role_dispatcher.py  scheduler_service.py  setup_hermes_env.py  (+21 more)
.claude/: settings.json  settings.local.json
alice/: __init__.py  query_handler.py
birdie/: __init__.py  action_handler.py
docs/superpowers/plans/: 2026-04-13-vps-deployment.md
docs/superpowers/specs/: 2026-04-13-vps-deployment-design.md
shared/: __init__.py  clarify_handler.py  line_responder.py  llm_prompts.py
skills/: _skill_base.py  brief_skills.py  calendar_skills.py  contacts_scan_skills.py  contacts_skills.py  digest_skills.py  draft_reply_skills.py  drive_skills.py  generation_skills.py  gmail_skills.py  memory_skills.py  remind_skills.py  sheets_skills.py  summarize_skills.py  tasks_skills.py  translate_skills.py  web_skills.py
temp_test/: config.yaml
tests/: test_main.py
